--- a/style.css
+++ b/style.css
@@ -21,12 +21,13 @@ h1 {
 }
 
 .container {
-      margin-top: 80px;
-      margin-left: 100px;
-      margin-right: 50px;
+      margin-top: 50px;
+      margin-left: 20px;
+      margin-right: 20px;
       background-color: #ECFDF5 ;
       border: 5px solid #FFFFFF;
       border-radius: 5px;
+      min-width: 100px;
       height: 550px;
       padding: 40px;
       
