--- a/style.css
+++ b/style.css
@@ -1,63 +1,67 @@
 body {
-      margin: 0;
+      margin: 0 auto;
+      padding: 0;
       display: block;
       justify-content: center;
       align-items: center;
       text-align: left;
-      background-color: #000000;
-      
-      
+      background-color: #201f1f;
 }
 h1 {
-      color: #2B283A;
+      color:#5DEF92;
       font-size: 40px;
-      margin-bottom: -5px;
+      
       
 }
 
+
 .password {
-      color: #10B981;
+      color: #dad6df;
       font-size: 43px;
 }
 
 .container {
-      margin-top: 50px;
+      margin-top: 0px;
       margin-left: 0px;
       margin-right: 0px;
-      background-color: #ECFDF5 ;
-      border: 5px solid #FFFFFF;
+      background: rgb(155,180,58);
+      background-color: #1a1919;
+      border: 1px  solid #696565;
       border-radius: 5px;
       min-width: 100px;
-      height: 550px;
-      padding: 40px;
+      height: 800px;
+      padding: 55px;
       
 }
 
 .p-text {
-      color: #6B7280;
+      color:#54de86;
+      letter-spacing: 1px;
       font-size: 21px;
       
 }
 
 .button {
-      border: 1px solid #10B981;
+      border: 1px solid #32b287;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
       border-radius: 5px;
-      background: #10B981;
-      box-shadow: 1px 1px  3px #10B981;
+      background: #138d64;
+      box-shadow: 1px 1px  3px #012703;
       margin-top: 20px;
-      font-size: 18px;
-      padding: 13px;
-      color: #FFFFFF;
+      font-size: large;
+      padding: 15px;
+      color: #e7e9f1;
+      text-transform: uppercase;
       
 }
 
 .button:hover {
-      background-color: #0e9e6e;
+      background-color: #0fb27c;
       cursor: pointer;
 }
 
 .button:active {
-      background-color: #10B981;
+      background-color: #27926e;
 }
 
 .btn {
@@ -75,7 +79,7 @@ h1 {
       border-radius: 6px;
       color: #5DEF92;
       text-align: center;
-      padding: 15px;
+      padding: 17px;
       margin: 5px;
       margin-right: 13px;
       font-family:sans-serif;
