--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ h1 {
       padding: 15px;
       color: #e7e9f1;
       text-transform: uppercase;
+      padding: 19px;
       
 }
 
@@ -79,10 +80,12 @@ h1 {
       border-radius: 6px;
       color: #5DEF92;
       text-align: center;
-      padding: 17px;
+      padding: 19px;
       margin: 5px;
-      margin-right: 13px;
+      margin-right:10px;
+      margin-left: 0px;
       font-family:sans-serif;
       letter-spacing: 1px;
       font-size:large;
+      
 }
